k8s/environments/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalog-api-ingress
  namespace: nagp-dev
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
    - host: catalog-api-dev.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: catalog-api
                port:
                  number: 80
